tests/baselines/reference/augmentedTypesClass.errors.txt
tests/cases/compiler/augmentedTypesClass.ts(3,5): error TS2300: Duplicate identifier 'c1'.
tests/cases/compiler/augmentedTypesClass.ts(7,6): error TS2300: Duplicate identifier 'c4'.


==== tests/cases/compiler/augmentedTypesClass.ts (2 errors) ====
    //// class then var
    class c1 { public foo() { } }
    var c1 = 1; // error
        ~~
!!! error TS2300: Duplicate identifier 'c1'.
    
    //// class then enum
    class c4 { public foo() { } }
    enum c4 { One } // error
         ~~
!!! error TS2300: Duplicate identifier 'c4'.